--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -36,6 +36,19 @@ body {
     width: 100vw;
 }
 
+/*Edit Button*/
+#edit-button {
+    position: absolute;
+    top: 10px;
+    right: 1%;
+    transition: all 0.25s;
+}
+#edit-button:hover {
+    color: #ABB4B7;
+    cursor: pointer;
+}
+
+/*Greeting*/
 #greeting {
     /*center on page*/
     position: absolute;
@@ -46,7 +59,39 @@ body {
     border-radius: 10px;
     padding: 20px;
 }
-#specific-greeting {
+#greeting h1 {
     color: white;
-    font-size: 5rem;
+    font-size: 8rem;
+    text-align: center;
+}
+
+
+/*Time*/
+#time {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    background-color: rgba(255,255,255,0.5);
+    padding: 20px;
+    border-radius: 10px;
+}
+#time h3, #time p {
+    font-size: 2rem;
+}
+
+/*Weather*/
+
+/*To-do*/
+
+/*Weekly Events*/
+
+
+
+/*MEDIA QUERIES*/
+@media screen and (max-width: 1000px) {
+    #greeting h1 {
+        font-size: 5rem;
+    }
 }
