--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -113,6 +113,9 @@ body {
 #weekly-events h3 {
     font-size: 1.5rem;
 }
+#weekly-events .date{
+    font-size: 1rem;
+}
 #weekly-events #save {
     position: absolute;
     top: 3px;
