--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -28,18 +28,20 @@ time, mark, audio, video {
     display: none;
 }
 
-/*MUST UPDATE POSITIONING OF DIVS*/
 body {
   background-image: url("../images/background-01.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: fixed;
+  background-attachment: fixed;
+  height: 100vh;
 }
 
 #container{
-    position: relative;
-    height: 100vh;
-    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /*Edit Button*/
@@ -59,11 +61,7 @@ body {
 
 /*Greeting*/
 #greeting {
-    /*center on page*/
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    align-self: center;
     background-color: rgba(0,0,0,0.8);
     border-radius: 10px;
     padding: 20px;
@@ -87,10 +85,6 @@ body {
 
 /*Time and Weather*/
 #time-and-weather {
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    transform: translateX(-50%);
     text-align: center;
     background-color: rgba(255,255,255,0.5);
     padding: 20px;
@@ -98,7 +92,7 @@ body {
     width: 80%;
 }
 #time-and-weather h3, #time-and-weather p {
-    font-size: 2rem;
+    font-size: 1.75rem;
 }
 
 /*Weather*/
@@ -107,11 +101,7 @@ body {
 
 /*Weekly Events*/
 #weekly-events {
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
+    position: relative;
     background-color: rgba(255,255,255,0.5);
     text-align: center;
     padding: 20px;
@@ -157,3 +147,4 @@ body {
         width: 80%;
     }
 }
+
