--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -69,7 +69,7 @@ body {
 }
 #greeting h1, #greeting p {
     color: white;
-    font-size: 5rem;
+    font-size: 5.5rem;
     text-align: center;
 }
 #greeting p {
@@ -137,9 +137,9 @@ body {
 
 
 /*MEDIA QUERIES*/
-@media screen and (min-width: 1200px) {
+@media screen and (max-width: 1200px) {
     #greeting h1 {
-        font-size: 5.5rem;
+        font-size: 4.5rem;
     }
 }
 
