Updated intro to be a form instead of alerts/prompts.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -44,6 +44,12 @@ body {
     align-items: center;
 }
 
+/*Start Form*/
+.card-header {
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 /*Edit Button*/
 #edit-button {
     position: absolute;
