--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -60,6 +60,7 @@ body {
 #edit-button:hover {
     color: #ABB4B7;
     cursor: pointer;
+    font-size: 1.5rem;
 }
 .modal-title {
     font-size: 1.5rem;
@@ -81,13 +82,13 @@ body {
 #greeting p {
     font-size: 1rem;
 }
-#to-do-icon {
+/* #to-do-icon {
     transition: all 0.25s;
 }
 #to-do-icon:hover {
     color: #ABB4B7;
     cursor: pointer;
-}
+} */
 
 /*Time and Weather*/
 #time-and-weather {
