--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -82,13 +82,16 @@ body {
 #greeting p {
     font-size: 1rem;
 }
-/* #to-do-icon {
+#to-do-icon {
     transition: all 0.25s;
 }
 #to-do-icon:hover {
     color: #ABB4B7;
     cursor: pointer;
-} */
+    font-size: 1.5rem;
+}
+
+
 
 /*Time and Weather*/
 #time-and-weather {
@@ -101,10 +104,6 @@ body {
 #time-and-weather h3, #time-and-weather p {
     font-size: 1.75rem;
 }
-
-/*Weather*/
-
-/*To-do*/
 
 /*Weekly Events*/
 #weekly-events {
@@ -121,13 +120,13 @@ body {
 #weekly-events .date{
     font-size: 1rem;
 }
-#weekly-events #save {
+#weekly-events #save-weekly {
     position: absolute;
     top: 3px;
     right: 5px;
     transition: all 0.25s;
 }
-#weekly-events #save:hover {
+#weekly-events #save-weekly:hover {
     color: blue;
     cursor: pointer;
     font-size: 1.5rem;
