Updated weekly events title to not be bolded.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -116,11 +116,13 @@ body {
     text-align: center;
     padding: 20px;
     border-radius: 10px;
-    font-weight: bold;
 }
 #weekly-events h3 {
     font-family: 'Redressed', cursive;
     font-size: 1.75rem;
+}
+#weekly-events .row {
+    font-weight: bold;
 }
 #weekly-events .date{
     font-size: 1rem;
