Update background image default.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -29,7 +29,7 @@ time, mark, audio, video {
 }
 
 body {
-  background-image: url("../images/background-01.jpg");
+  background-image: url("../images/background-m1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: fixed;
