--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -50,24 +50,9 @@ body {
     font-weight: bold;
 }
 
-/*Edit Button*/
-#edit-button {
-    position: absolute;
-    top: 10px;
-    right: 1%;
-    transition: all 0.25s;
-}
-#edit-button:hover {
-    color: #ABB4B7;
-    cursor: pointer;
-    font-size: 1.5rem;
-}
-.modal-title {
-    font-size: 1.5rem;
-}
-
 /*Greeting*/
 #greeting {
+    position: relative;
     align-self: center;
     background-color: rgba(0,0,0,0.8);
     border-radius: 10px;
@@ -90,6 +75,24 @@ body {
     font-style: italic;
 }
 
+/*Edit Button*/
+#edit-button {
+    position: absolute;
+    top: 10px;
+    right: 1%;
+    padding: 0;
+    color: rgba(255,255,255,0.65);
+    border-radius: 5px;
+    transition: all 0.25s;
+}
+#edit-button:hover {
+    color: rgb(80, 117, 185);
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+.modal-title {
+    font-size: 1.5rem;
+}
 
 /*Time and Weather*/
 #current-time {
@@ -101,7 +104,7 @@ body {
 }
 #time-and-weather {
     text-align: center;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.65);
     padding: 20px;
     border-radius: 10px;
     width: 80%;
@@ -111,7 +114,7 @@ body {
 /*Weekly Events*/
 #weekly-events {
     position: relative;
-    background-color: rgba(255,255,255,0.7);
+    background-color: rgba(255,255,255,0.65);
     text-align: center;
     padding: 20px;
     border-radius: 10px;
@@ -129,11 +132,22 @@ body {
 #weekly-events #save-weekly {
     position: absolute;
     top: 3px;
-    right: 5px;
+    right: 35px;
     transition: all 0.25s;
 }
 #weekly-events #save-weekly:hover {
-    color: blue;
+    color: rgb(80, 117, 185);
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+#weekly-events #clear-weekly {
+    position: absolute;
+    top: 3px;
+    right: 10px;
+    transition: all 0.25s;
+}
+#weekly-events #clear-weekly:hover {
+    color: rgb(80, 117, 185);
     cursor: pointer;
     font-size: 1.5rem;
 }
